# etceterapp

./: .gitmodules  CMakeLists.txt
examples/: edat.cpp  edat.hpp  edat_helper.cpp  ndfbin.cpp  trie.cpp
src/: array.hpp  basic.hpp  conditional.hpp  etcetera.cpp  etcetera.hpp  helpers.hpp  number.hpp  pointer.hpp  special.hpp  string.hpp  struct.hpp  utfconv.hpp
tests/: array_tests.cpp  basic_tests.cpp  conditional_tests.cpp  number_tests.cpp  offset_tests.cpp  pointer_tests.cpp  special_tests.cpp  string_tests.cpp  struct_tests.cpp  tests.cpp  tests_xml.cpp
